<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
    
  <groupId>org.praxislive</groupId>
  <artifactId>praxiscore</artifactId>
  <version>6.8.0-SNAPSHOT</version>
  <packaging>pom</packaging>
    
  <name>PraxisCORE</name>
  <description>Forest-of-actors runtime supporting real-time systems and real-time recoding - bringing aspects of Erlang, Smalltalk and Extempore to Java.</description>
  <url>https://www.praxislive.org</url>
  
  <licenses>
    <license>
      <name>LGPL-3.0-only</name>
      <url>http://www.gnu.org/licenses/lgpl.html</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
    
  <modules>
    <module>praxiscore-api</module>
    <module>praxiscore-base</module>
    <module>praxiscore-code</module>
    <module>praxiscore-components</module>
    <module>praxiscore-core-code</module>
    <module>praxiscore-code-services</module>
    <module>praxiscore-hub</module>
    <module>praxiscore-script</module>
    <module>praxiscore-launcher</module>
    <module>praxiscore-project</module>
    <module>praxiscore-video</module>
    <module>praxiscore-video-code</module>
    <module>praxiscore-video-components</module>
    <module>praxiscore-video-gstreamer</module>
    <module>praxiscore-video-pgl</module>
    <module>praxiscore-video-pgl-natives</module>
    <module>praxiscore-video-pgl-code</module>
    <module>praxiscore-hub-net</module>
    <module>praxiscore-audio</module>
    <module>praxiscore-audio-code</module>
    <module>praxiscore-audio-components</module>
    <module>praxiscore-gui</module>
    <module>praxiscore-code-mima</module>
    <module>praxiscore-launcher-jline</module>
    <module>praxiscore-purl</module>
    <module>praxiscore-bin</module>
  </modules>
    
  <scm>
    <url>https://github.com/praxis-live/praxiscore/tree/master</url>
    <connection>scm:git:https://github.com/praxis-live/praxiscore.git</connection>
    <developerConnection>scm:git:https://github.com/praxis-live/praxiscore.git</developerConnection>
  </scm>

  <distributionManagement>
    <snapshotRepository>
      <id>sonatype-central</id>
      <url>https://central.sonatype.com/repository/maven-snapshots</url>
    </snapshotRepository>
    <repository>
      <id>sonatype-central</id>
      <url>https://repo.maven.apache.org/maven2</url>
    </repository>
  </distributionManagement>

  <developers>
    <developer>
      <name>Neil C Smith</name>
      <roles>
        <role>Lead developer</role>
      </roles>
      <email>neil@codelerity.com</email>
    </developer>
  </developers>

  <properties>
    <njord.version>0.9.9</njord.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>6.1.1</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>net.java.dev.jna</groupId>
        <artifactId>jna</artifactId>
        <version>5.19.1</version>
      </dependency>
      <dependency>
        <groupId>net.java.dev.jna</groupId>
        <artifactId>jna-platform</artifactId>
        <version>5.19.1</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
  
  <dependencies>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>
  
  <build>
    <extensions>
      <extension>
        <groupId>eu.maveniverse.maven.njord</groupId>
        <artifactId>extension3</artifactId>
        <version>${njord.version}</version>
      </extension>
    </extensions>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>eu.maveniverse.maven.plugins</groupId>
          <artifactId>njord</artifactId>
          <version>${njord.version}</version>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>flatten-maven-plugin</artifactId>
          <version>1.7.3</version>
          <configuration>
            <flattenMode>ossrh</flattenMode>
          </configuration>
          <executions>
            <execution>
              <id>flatten</id>
              <phase>process-resources</phase>
              <goals>
                <goal>flatten</goal>
              </goals>
            </execution>
            <execution>
              <id>flatten.clean</id>
              <phase>clean</phase>
              <goals>
                <goal>clean</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.5.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.15.0</version>
          <configuration>
            <release>21</release>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.5.5</version>
          <configuration>
            <systemPropertyVariables>
              <junit.jupiter.execution.timeout.mode>disabled_on_debug</junit.jupiter.execution.timeout.mode>
            </systemPropertyVariables>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>3.1.4</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>3.12.0</version>
          <executions>
            <execution>
              <id>attach-javadocs</id>
              <goals>
                <goal>jar</goal>
              </goals>
            </execution>
            <execution>
              <id>attach-aggregate-javadoc</id>
              <goals>
                <goal>aggregate-jar</goal>
              </goals>
              <inherited>false</inherited>
            </execution>
          </executions>
          <configuration>
            <skippedModules>praxiscore-video-pgl-natives,praxiscore-bin</skippedModules>
            <detectOfflineLinks>false</detectOfflineLinks>
            <release>21</release>
            <additionalOptions>
              <additionalOption>-Xdoclint:none</additionalOption>
            </additionalOptions>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
    
    <plugins>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>flatten-maven-plugin</artifactId>
      </plugin>
    </plugins>
  </build>
  
  <profiles>
    <profile>
      <id>release</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <version>3.4.0</version>
            <executions>
              <execution>
                <id>attach-sources</id>
                <goals>
                  <goal>jar-no-fork</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>3.2.8</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
  
</project>
